[gd_scene load_steps=5 format=3 uid="uid://c7exwq3vd347l"]

[ext_resource type="Script" path="res://Core/Player.gd" id="1_k2mfb"]
[ext_resource type="PackedScene" uid="uid://cx82f5ou3qvac" path="res://Scenes/buff.tscn" id="2_s0o70"]
[ext_resource type="PackedScene" uid="uid://bdbranrjl5oll" path="res://Scenes/hand.tscn" id="2_xvjr6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6001"]
size = Vector2(480, 250)

[node name="Player" type="Node2D"]
script = ExtResource("1_k2mfb")
buff_scene = ExtResource("2_s0o70")

[node name="Hand" parent="." instance=ExtResource("2_xvjr6")]
position = Vector2(100, 0)

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_right = 60.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PlayerUI"]
layout_mode = 0
offset_left = -13.0
offset_top = -98.0
offset_right = 27.0
offset_bottom = -58.0
scale = Vector2(1.41593, 2.3853)
color = Color(0.247059, 0.247059, 0.247059, 0.784314)

[node name="ManaLabel" type="RichTextLabel" parent="PlayerUI"]
layout_mode = 0
offset_top = -38.0
offset_right = 40.0
offset_bottom = 2.0
theme_override_colors/default_color = Color(0, 0.345098, 0.764706, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 24
text = "10"

[node name="HealthLabel" type="RichTextLabel" parent="PlayerUI"]
layout_mode = 0
offset_top = -65.0
offset_right = 40.0
offset_bottom = -25.0
theme_override_colors/default_color = Color(0, 0.449339, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 24
text = "10"

[node name="MoneyLabel" type="RichTextLabel" parent="PlayerUI"]
layout_mode = 0
offset_top = -94.0
offset_right = 40.0
offset_bottom = -54.0
theme_override_colors/default_color = Color(0.662745, 0.615686, 0.0941176, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 24
text = "10"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(240, -125)
shape = SubResource("RectangleShape2D_d6001")

[node name="BuffContainer" type="HBoxContainer" parent="."]
offset_left = 6.0
offset_top = -138.0
offset_right = 326.0
offset_bottom = -98.0
